personal app in ch.6

--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -76,7 +76,7 @@ Thus, to provide even greater focus, the action of implementing a game design pa
 
 At this level, the object of the action of implementing a game design pattern is more focused. Participants are focused on implementing or adapting a design pattern in their own game. This allows for analytical clarity and supports the argument that GDPs served not only as pedagogical scaffolds but also as conceptual anchors for the intervention's iterative development.
 
-The analysis that follows is organised using Rogoff’s three planes of analysis [@rogoff_observing_1995] [^r3]. This chapter provides evidence and analysis of how GDPs function across these planes, acting as mediational tools that support individual game making  ability, shared practice, and broader community development. Each theme will be developed in turn using examples from participant activity [^3p].
+The analysis that follows is organised using Rogoff’s three planes of analysis [@rogoff_observing_1995] [^r3]. This chapter provides evidence and analysis of how GDPs function across these planes, acting as mediational tools that support individual game making  ability, shared practice, and broader community development. Each theme will be developed in turn in sections that begin with examples from participant activity[^3p], before further analysis and discussion.
 
 <!-- For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 <!-- As the design progressed, it became useful to analyse smaller units of activity.  -->
@@ -147,9 +147,48 @@ Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen u
 
 Kafai and Burke's review [-@kafai_constructionist_2015] notes the greater number of studies focus on personal dimensions of learning programming and curricular knowledge compared to the deficit regarding social and cultural aspects. Personal appropriation is described in of Kafai and Burke's [-@kafai_constructionist_2015, p.4] review of CGD&P  as "knowledge appropriation and transformation that is instantiated in the process of making games". Rogoff's interpretation of personal appropriation is more complex communicating the bi-directional nature of the process where individual interpretations of community gained knowledge is remediated and fed back into the community. The evolving  learning design process resulted in activities which align well with the exploration of computational thinking, systems concepts and other computing concepts and procedures.
 
+Acknowledging the broad coverage of existing research covering this aspect of CGD&P, this section is limited in scope and aims to contribute through a narrow focus on code patching and subsequent debugging, and the development of digital literacy skills. I have chosen these areas as there were a subject of several observations provoked by the innovative characteristics of the learning design of this research.
 
-I was inspired by the the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work who created a map of learning dimensions to a seemingly chaotic tinkering and making process in museum contexts. As such, during early data analysis, with the potential to adapt this learning design to a more formal environment in mind, I mapped out curriculum-oriented concepts that suited exploration via  in the game making process of this research. This process resulted in a learning map of curricular concepts included here as Table 6.x. For brief definitions of these terms see the Glossary of this thesis.
+Addressing digital and web literacies first, to integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop foundational digital skills related to using a desktop personal computer and use of internet browser and online tool ( see Chapter 1 and  Appendix C.dliteracy). The the following vignette extract features a mother Madiha and daughter Nasrin [^v5].
 
+    Madiha has just finished created a pixel art sprite of an alien and comment, "We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset." Madiha's emotional investment in her creative prompts Sonia, a fellow parent, to comment: "Have you saved it?" Unsure of how to transfer the image from the online image editor the glitch coding environment, Madiha seeks assistance from her daughter:   
+
+    Madiha: Nasrin! Nasrin! Nasrin! Do you know how to get it in the game?
+    Nasrin: Oh my god!
+    Madiha: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved? Right now export it.
+    Nasrin: Do you even know what export means?
+    Madiha: I know what export means!
+    Nasrin: Ok then, smarty-pants.
+
+<!-- In another example, changing pen colours in the graphical tool is a process that Nasrin(c) has already internalised and performs effortlessly, whereas Madiha(p) is still deliberately working to build her competency. Nasrin(p) has fully operationalised the process, incorporating it into her repertoire of practices. -->
+
+The implementation of Madiha of the GDPs of adding a new hazard element into her game drives the development of these technical processes, and facilitates a process of accessing help to do so.  Thus, in this process, GDPs functioned as both a motivational and conceptual tools facilitating a the application of a technical processes. More broadly, video data showed, participants developing fluency in areas such as browser tab use, creating, uploading, and integrating graphical and audio assets, and proficiency in keyboard and mouse use for text manipulation [^op].
+
+<!-- Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game. -->
+
+<!-- GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching.  -->
+
+This section now turns to the role of  GDPs in relation to the practice of _code patching_ and tactical responses to coding errors. Code patching is a professional technical process to scaffold the application of new features in computer programming [^ccp]. This patching process became an important technique of the learning design and supporting resources documentation. The following extract from Vignette 1 shows an example of code patching in practice [^v1].  
+
+<!-- MOVE?
+Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. -->
+
+<!-- INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL? -->
+
+    Toby finishes playtesting and navigates to the page containing a menu of game design patterns [^ggcm]. He navigates to a code snippet project illustrating a game mechanic of a moving enemy. He takes time to examine the start of code carefully. Toby then clicks on the tab of his own game code and examines how it is different. He returns to the example code and scrolls down and examines the code needed to patch into his game and after hesitation he returns to copy the full code needed from the example. He then navigates to the same section of his own code project template. Carefully pasting the code into the right area and check the result, correctly showing a new enemy moving back and forth horizontally. Toby playtests his game and struggles to get past this new enemy. He tentatively alters parameters of the code and seemingly inadvertently changes the direction of the  movement of the hazard to vertical. He laughs and comments to his family: "Mine's just going up and down! Granny! I've got mine to up and down." Later iterations to his code over the next 30 minutes include changes to allow different moving enemies for each level, and changes to the movement parameters of the enemy of level 2 (see Vignette 1 for more detail).
+
+<!-- ![Figure 6.x - Code pasted from snippet example from Vignette 1 ](./Pictures/vig_1_cap.v1.png){width=95%} -->
+
+
+<!-- at the following location https://glitch.com/edit/#!/sgte-example-moving-enemy?path=js%2Fgame.js%3A1%3A0
+and the documentation is here
+https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
+-->
+Toby shows great increasing fluidity in the process of navigation of between documentation, code and game preview windows. By way of contrast his use of supporting documentation to undertake the code patching process is still hesitant and intentional. Debugging is both motivated and facilitated by the participants strong understanding driven of what the desired GDP should provoke in the target behaviour of the games. The need to get both the starting and ending position of the movement of the imported enemy provokes several iterations of debugging [^db]. Although both starting template code and additional snippet based code was provided, mistakes occurred due to errors in placement and in making additional customisations, as in the example above. The process of code patching process often provoked errors within resulting game output in the form of  _glitches_ [^gl]. In my facilitator role, when this happened, I tried to mobilise participants existing knowledge of their chosen GDP behaviour compared with the erroneous behaviour of the glitch, sometimes using humour when pointing out the glitch within this process as a strategy to mitigate the potentially frustrating process of debugging.
+
+<!-- DEVELOP GLITCHES / ERROR TYPES TO MAKE STRONGER IF NEEDED? -->
+
+Turning to a wider analysis of the process of personal appropriation of knowledge within the game making process, I was inspired by the the process and rationale of Bevan and Petrich's [-@bevan_learning_2015; -@petrich_it_2013] work who created a map of learning dimensions to support facilitation of seemingly chaotic tinkering and making processes in museum contexts. During data analysis, the process of attempting a systematic coding scheme resulted in a growing list of curricular, conceptual and practical constructs. While this list was not used fo systematic coding as explained in Chapter for, I returned to it in later phases of the design process[^p45], when looking to adapt this learning design to a more formal environment in mind. This list formed the basis for a map of curriculum-oriented concepts that suited exploration via  in the game making process described in this research. It is included here as Table 6.x.[^ld1]
 
 | Computational Thinking  | Coding Concepts    | Systems Patterns    | Design and Technical Practices|
 |--------------|--------------|-----------|------------|
@@ -164,29 +203,29 @@ I was inspired by the the process and rationale of Bevan and Petrich's [-@bevan_
 
 Table 6.x. Learning dimensions facilitated by this study's game making process
 
-The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts [^ld].
+The map of learning dimensions above includes a balance of skills, concrete and more abstract aspects of coding concepts [^ld]. The creation of a provision of these learning dimensions aims as a supporting resource aimed to help future teachers and facilitors locate curricular value within the game making process and to to address tensions in the integration of concepts into an complex making process. The approach specifically addresses a paradox common in application project-based approaches in more formal settings, the tension between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that this tension, named the _play paradox_ by Hoyles and colleagues [-@hoyles_pedagogy_1992], can be addressed by orienting the learning map to follow a leading activity of the learning design aligned with the goals of the participants, in this case to add GDPs to the game.  
 
-KEEP THIS MOTIVATION HERE? - OR MOVE - iT IS IN chap 7 - AND AN APPENDIX ?
+COME BACK TO THIS - HOW WHAT DOES THIS MEAN?
 
-The mapping of learning dimensions aims to address tensions in the integration of concepts into an informal context, specifically, a tension or paradox common in project-based approaches in more formal settings, between the an exploratory learning approach and a possibility or need to align with curricular concepts [@hoyles_pedagogy_1992]. I propose that the play paradox [@hoyles_pedagogy_1992] can be addressed by orienting the learning map to follow a leading activity of the learning design aligned with the  goals of the participants, in this case to add GDPs to the game.  The following examples show examples of this within the data of the study.
+However, in this informal learning context, the overall motivation of participants was on having fun while making an engaging game together rather than explicitly developing to knowledge linked to the computing curriculum, reflected in the overall orientation of this thesis. In this context, the play paradox is less extreme and  my approach to the learning design, facilitation and to the methodology of this study reflects this.   
+
+**Summary**
+
+In summary, this section has provided a selected overview of examples of the personal appropriation of knowledge and processs  being  driven by the implementation of GDPs. The observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes. The map of learning dimensions that emerged from inductive and deductive stages of thematic analysis presented in Table 6.x contains within it indications of tensions related to abstract and concrete aspects of knowledge at play within the implementation of GDPs which are beyond the remit of this section but which are explored in Chapter 7. 
+
+**Signposting to fuller exploration of resolving play paradox in Appendix D.? and in Chapter 7.**
 
 <!-- RECALL END OF CH.5  - I THINK THIS IS IN CH.7
 It is of value to compare the observational process of creating the learning map to the more intentional, concept-driven design approach described in research on Microworlds, which foregrounds the role of learning designers in shaping the affordances of (playful) learning environments to steer learners toward exploring curricular concepts. -->
 
 <!--
 RECALL END OF CH.5
-In much of the Microworlds research, these are often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. T
+In much of the Microworlds research, these are Acknowledging the broad coverage of existing research covering this aspect of CGD&P, this section is limited in scope and aims to contribute through a narrow focus on code patching and subsequent debugging, and the development of digital literacy skills. I have chosen these areas as there were a subject of several observations provoked by the innovative characteristics of the learning design of this research.often scientific or mathematical concepts: take, for example, geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. T
 
 his design has used several structural constructionist techniques involved in designing Microworlds [@laurillard2020significance], however, as the principal motivation of this study is acculturation within a game-making community, my focus has prioritised procedural skills that facilitate community participation over underlying subject related concepts. -->
 
 <!-- DEVELOP THIS -  
 For example, In Vignette 5, the goal is to get the image created into the game. -->
-
-In this informal learning context, the overall motivation of participants was on having fun while making an engaging game together rather than explicitly developing to knowledge linked to the computing curriculum, reflected in the overall orientation of this thesis.
-
-In this context, the play paradox is less extreme and  my approach to the learning design, facilitation and to the methodology of this study reflects this.   
-
-Given this focus and acknowledging the broad coverage of existing research covering this aspect of CGD&P, this section is limited in scope and aims to contribute through a narrow focus on code patching and subsequent debugging, and the development of digital literacy skills. I have chosen these areas as there were a subject of several observations provoked by the innovative characteristics of the learning design of this research.
 
 
 <!-- Specifically there was no testing involved and the interview focus was on socio-cultural aspects.  -->
@@ -205,69 +244,19 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 <!-- NOTE - (Additional examples may be included in Appendix.learning) -->
 
 
-### The interrelationship of GDPs and the development of personal appropriation of skills and processes
+<!-- ### The interrelationship of GDPs and the development of personal appropriation of skills and processes -->
 
 <!-- Due to limited scope of this section I prioritise an analysis here of the technical practices of web literacy,code patching and debugging.  -->
 
 <!-- While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane.  -->
 <!-- These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. -->
 <!-- In line with Rogoff's understanding of personal appropriation as a bi-directional process, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants actively contributed their interpretations of knowledge back into the communities they belonged to. -->
-_Addressing digital and web literacies first,_ to integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop foundational digital skills related to using a desktop personal computer and use of internet browser and online tool ( see Chapter 1 and  Appendix C.dliteracy)
 
-The the following vignette extract features a mother Madiha and daughter Nasrin [^v5].
-
-    Madiha has just finished created a pixel art sprite of an alien and comment, "We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset." Madiha's emotional investment in her creative prompts Sonia, a fellow parent, to comment: "Have you saved it?" Unsure of how to transfer the image from the online image editor the glitch coding environment, Madiha seeks assistance from her daughter:   
-
-    Madiha: Nasrin! Nasrin! Nasrin! Do you know how to get it in the game?
-    Nasrin: Oh my god!
-    Madiha: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved? Right now export it.
-    Nasrin: Do you even know what export means?
-    Madiha: I know what export means!
-    Nasrin: Ok then, smarty-pants.
-
-<!-- In another example, changing pen colours in the graphical tool is a process that Nasrin(c) has already internalised and performs effortlessly, whereas Madiha(p) is still deliberately working to build her competency. Nasrin(p) has fully operationalised the process, incorporating it into her repertoire of practices. -->
-
-
-The implementation of Madiha of the GDPs of adding g a new hazard element into her game drives the development of these technical processes, and facilitates a process of accessing help to do so.  Thus, in this process, GDPs functioned as both a motivational and conceptual tools facilitating a the application of a technical processes. More broadly, video data showed, participants developing fluency in areas such as browser tab use, creating, uploading, and integrating graphical and audio assets, and proficiency in keyboard and mouse use for text manipulation [^op].
-
-<!-- Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game. -->
-
-<!-- GDPs also functioned a container for structured project stages, facilitating the initial use of procedures as illustrated in this section using the example of code patching.  -->
-
-This section now turns to the role of  GDPs in relation to the practice of _code patching_ and tactical responses to coding errors. Code patching is a professional technical process to scaffold the application of new features in computer programming [^ccp]. This patching process became an important technique of the learning design and supporting resources documentation. The following extract from Vignette 1 shows an example of code patching in practice [^v1].  
-
-<!-- MOVE?
-Video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. -->
-
-<!-- INSERT SHORTER VIGNETTE HERE. ADD ONE WITH TIMED DETAIL? -->
-
-    Toby finishes playtesting and navigates to the page containing a menu of game design patterns [^ggcm]. He navigates to a code snippet project illustrating a game mechanic of a moving enemy. He takes time to examine the start of code carefully. Toby then clicks on the tab of his own game code and examines how it is different. He returns to the example code and scrolls down and examines the code needed to patch into his game and after hesitation he returns to copy the full code needed from the example. He then navigates to the same section of his own code project template. Carefully pasting the code into the right area and check the result, correctly showing a new enemy moving back and forth horizontally. Toby playtests his game and struggles to get past this new enemy. He tentatively alters parameters of the code and seemingly inadvertently changes the direction of the  movement of the hazard to vertical. He laughs and comments to his family: "Mine's just going up and down! Granny! I've got mine to up and down." Later iterations to his code over the next 30 minutes include changes to allow different moving enemies for each level, and changes to the movement parameters of the enemy of level 2, as seen in Figure 6.x below.
-
-![Figure 6.x - Code pasted from snippet example from Vignette 1 ](./Pictures/vig_1_cap.v1.png){width=95%}
-
-
-<!-- at the following location https://glitch.com/edit/#!/sgte-example-moving-enemy?path=js%2Fgame.js%3A1%3A0
-and the documentation is here
-https://3m.flossmanuals.net/#game-mechanic-add-moving-enemies
--->
-Toby shows great increasing fluidity in the process of navigation of between documentation, code and game preview windows. By way of contrast his use of supporting documentation to undertake the code patching process is still hesitant and intentional.
-
-Debugging is both motivated and facilitated by the participants strong understanding driven of what the desired GDP should provoke in the target behaviour of the games. The need to get both the starting and ending position of the movement of the imported enemy provokes several iterations of debugging [^db].  
-
-Although code was provided, mistakes occurred in practice and additional customisations were introduced. The process of code patching process often provoked project errors in the form of  _glitches_ [^gl]. As a facilitator I mobilised participants existing knowledge of their chosen GDP behaviour to compare with the erroneous behaviour of the glitch. I would try to use humour when pointing out the glitch within this process as a strategy to mitigate the potentially frustrating process of debugging.
-
-DEVELOP GLITCHES / ERROR TYPES TO MAKE STRONGER IF NEEDED?
 
 <!-- As a facilitator (see Appendix.patching), I made explicit the path between choosing a pattern to work on and the mechanics of accessing documentation and the code patching process.  -->
 
 
-### Summary of section
 
-**Summary**
-
-In addition to the use of new techniques being  driven by the implementation of GDPs, the following observations reveal a complex, interdependent relationship between GDP concepts and emergent technical processes.
-
-**Signposting to fuller exploration of resolving play paradox in Appendix D.? and in Chapter 7.**
 
 
   <!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
@@ -883,6 +872,9 @@ This chapter has begun to address Research Question 2, which asked how a collect
 
 [^3p]: Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x.
 
+
+[^ld]: For fuller descriptions are avaiable within the learning resources created for P4 and P5 here. https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
+
 [^ld]: See  Appendix.D.5 which explores in more detail the evolution of this map
 
 [^op]: In line with CHAT theory, this can be interpreted as the gradual operationalisation of actions that initially required more explicit guidance, as discussed by Leontiev [@leontiev_activity_2009].
@@ -964,7 +956,7 @@ This chapter has begun to address Research Question 2, which asked how a collect
 
 [^rep]: While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it is limited in the way it addresses aspect of choice when of drawing on home interests.
 
-
+[^p45]: During P4, P5 and D3. See Chapter 4 for clarification.
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
